0025374: [6.8.0beta regression] gp_Trsf2d::SetMirror() looses transformation form

1. Elements of gp_TrsfForm have been documented
2. gp_Trsf2d class has been reverted to non-regression case.

Update of test-cases